--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
+# MidiMap Dependencies
+# Install: pip install -r requirements.txt
+
+# Core MIDI functionality
 mido>=1.2.10
 pynput>=1.7.6
-# python-rtmidi>=1.4.9  # Optional: install manually if needed for better MIDI support
-# On Python 3.13, python-rtmidi may need to be installed from source or use Python 3.12
+
+# Audio to MIDI conversion
+librosa>=0.9.2
+numpy>=1.24.0
+onnxruntime>=1.15.0
+
+# YouTube to MP3 conversion
+yt-dlp>=2024.1.0
+
+# Optional dependencies (uncomment if needed):
+# python-rtmidi>=1.4.9  # Better MIDI support (may require manual build on Python 3.13+)
+# onnxruntime-directml>=1.15.0  # GPU acceleration on Windows
