Update GUI with new test and practice features, including buttons for testing MIDI playback and practicing while paused. Adjust layout for better usability. Modify .gitignore to include specific directories. Clean up LICENSE and init files with whitespace removal.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+src/__pycache__/
 # C extensions
 *.so
 
@@ -42,10 +42,11 @@ env/
 .DS_Store
 Thumbs.db
 Desktop.ini
-
-# Project specific
 downloads/
 midi_output/
+# Project specific
+downloads\
+midi_output\
 *.mid
 *.midi
 
